--- a/clock.css
+++ b/clock.css
@@ -4,11 +4,12 @@
   width: 60%;
   height: 200px;
   margin-left: 120px;
+  margin-top: 200px;
 }
 
 /* hour box */
 #HH{
-  border:1px solid red;
+  border:3px solid;
   width: 200px;
   height: 150px;
   margin-left: 50px;
@@ -17,7 +18,7 @@
 
 /* minutes box */
 #MM{
-  border:2px solid blue;
+  border:3px solid blue;
   width: 200px;
   height: 150px;
   margin-left: 260px;
@@ -26,9 +27,25 @@
 
 /* seconds bo */
 #SS{
-  border:2px solid green;
+  border:3px solid green;
   width: 200px;
   height: 150px;
   margin-left: 470px;
   margin-top: -153px;
+}
+
+#background{
+  border: 1px solid;
+  width: 100%;
+  height: 900px;
+  position: fixed;
+  background-color: none;
+}
+
+#hexnum{
+  border: 1px solid;
+  width: 25%;
+  height: 100px;
+  margin-left: 290px;
+  font-size: 2em;
 }
