--- a/clock.css
+++ b/clock.css
@@ -1,20 +1,3 @@
-/* body{
-  margin-top: 200px;
-  text-align: center;
-  color: white;xs
-
-}
-
-#clock{
-  font-weight: 300;
-  font-size: 100px;
-}
-
-#hex_color{
-  font-size: 30px;
-} */
-
-
 
 /* wapper box */
 #background{
@@ -51,4 +34,61 @@
   text-align: center;
   font-size: 30px;
 
+}
+
+#next{
+  width: 60px;
+  height: 35px;
+  border: 4px solid;
+  position: relative;
+  bottom: 500px;
+  left: 1200px;
+  text-align: center;
+  text-decoration: underline;
+  text-transform: capitalize;
+  font-size: 25px;
+}
+
+/* wapper box */
+#picbackground{
+    border: 1px solid;
+    width: 100%;
+    height: 800px;
+    /* background-image: url(image_folder/pic1.jpg);
+    background-size: ; */
+}
+
+#picclock{
+  border: 2px solid green;
+  width: 70%;
+  height: 170px;
+  text-align: center;
+  font-size: 110px;
+  margin-top: 300px;
+  margin-left: 200px;
+}
+
+
+
+#clockBorder{
+  border: 2px solid;
+  width: 45%;
+  height: 80px;
+  margin-left: 382px;
+  text-align: center;
+  font-size: 30px;
+  margin-top: 40px;
+}
+
+#back{
+  width: 60px;
+  height: 35px;
+  border: 4px solid;
+  position: relative;
+  bottom: 550px;
+  left: 70px;
+  text-align: center;
+  text-decoration: underline;
+  text-transform: capitalize;
+  font-size: 25px;
 }
